ДОбавление справочников "Сервера" и "ТипыСерверов"

--- a/KASTORPROJECT/src/InformationRegisters/ДоступыСотрудников/Forms/ФормаЗаписи/Form.form
+++ b/KASTORPROJECT/src/InformationRegisters/ДоступыСотрудников/Forms/ФормаЗаписи/Form.form
@@ -389,5 +389,10 @@
     <navigationPanel/>
     <commandBar/>
   </commandInterface>
-  <extInfo xsi:type="form:InformationRegisterManagerFormExtInfo"/>
+  <extInfo xsi:type="form:InformationRegisterManagerFormExtInfo">
+    <handlers>
+      <event>AfterWrite</event>
+      <name>ПослеЗаписи</name>
+    </handlers>
+  </extInfo>
 </form:Form>
