--- a/KASTORPROJECT/src/Catalogs/ПользователиИБ/Forms/ФормаЭлемента/Form.form
+++ b/KASTORPROJECT/src/Catalogs/ПользователиИБ/Forms/ФормаЭлемента/Form.form
@@ -281,5 +281,10 @@
     <navigationPanel/>
     <commandBar/>
   </commandInterface>
-  <extInfo xsi:type="form:CatalogFormExtInfo"/>
+  <extInfo xsi:type="form:CatalogFormExtInfo">
+    <handlers>
+      <event>AfterWrite</event>
+      <name>ПослеЗаписи</name>
+    </handlers>
+  </extInfo>
 </form:Form>
